Authentication added, model changed

--- a/BudgetAPI/appsettings.json
+++ b/BudgetAPI/appsettings.json
@@ -1,13 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "AppSettings": {
+        "Secret": "hahfjfhjd454545ghghg"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "BudgetContext": "Server=(localdb)\\mssqllocaldb;Database=BudgetContext-a1a7d8eb-f31c-473d-b942-ab6eb472f31d;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "BudgetContext": "Server=(localdb)\\mssqllocaldb;Database=BudgetContext-a1a7d8eb-f31c-473d-b942-ab6eb472f31d;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
 }
