Get incomes query updated & income endpoint changed

--- a/BudgetAPI/BudgetAPI.csproj
+++ b/BudgetAPI/BudgetAPI.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Budget.Application\Budget.Application.csproj" />
+    <ProjectReference Include="..\Budget.Infrastructure\Budget.Infrastructure.csproj" />
   </ItemGroup>
 
 
