App clients moved to same repository & API project renamed

--- a/Budget.API/appsettings.json
+++ b/Budget.API/appsettings.json
@@ -11,6 +11,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "BudgetContext": "Server=(localdb)\\mssqllocaldb;Database=BudgetContext-a1a7d8eb-f31c-473d-b942-ab6eb472f31d;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "BudgetContext": "Server=(localdb)\\mssqllocaldb;Database=BudgetDb;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
 }
