--- a/Budget.API/Properties/launchSettings.json
+++ b/Budget.API/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BudgetProject": {
+    "Budget": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger/index.html",
